--- a/css/index.css
+++ b/css/index.css
@@ -5,32 +5,40 @@
     padding: 0;
     margin: 0;
 }
-
+html{
+    scroll-behavior: smooth;
+    
+}
 body{
     font-family: 'Roboto', sans-serif;
+    background-color: #efefef;
 }
 
-h1{ font-size: 2.5em;}
+h1{ font-size: 2.5em; }
 h2{ font-size: 1.7em;}
 h3{ font-size: 1.5em;}
 p{ font-size: 1em;}
 ul{ list-style: none;}
 
 button{
-    font-size: 1.5em;
+    font-size: 1.2em;
+    margin-top: 20px;
     font-weight: bold;
     padding: 10px 20px;
-    border-radius: 20px;
-    border: 2px solid rgba(0,0,0,0.5);
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5) ;
+    border-radius: 10px;
+    border: 1px solid rgba(0,0,0,0.5);
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
     color: #fff;
-    background-color: #9c27b0;
+    background-color: #8e24aa;
 }
 
 button:hover{
     background-color:#6a0080 ;
-    color: #e0e0e0;
+    color: #fff;
 }
+
+.color-acento{color: #00acc1}
+
 
 /* Estilo header general/menu sidebar y containers*/
 header{
@@ -53,7 +61,7 @@ header{
 
 .sidebar{
     text-align: center;
-    font-size: 15px;
+    font-size: 16px;
     
 }
 
@@ -62,6 +70,7 @@ header{
     padding: 25px;
     width: 100%;
     background-color: #484848;
+    cursor: default;
 
 
 }
@@ -71,21 +80,24 @@ header{
     width: 100%;
     height: auto;
     border-radius: 50px;
+    cursor: default;
+    
 }
 
 .sidebar ul li{
-    margin: 10px 0 50px 0;
+    margin: 10px 0 40px 0;
     
 }
 
 .sidebar ul li a{
+    
     color: #e0e0e0;
     -webkit-text-stroke: 0.1px #000;
     padding: 0;
 }
 
 .sidebar ul li a:hover{
-    color: #9c27b0;
+    color: #0097a7;
     transition: all 0.4s ease 0s;
 
 }
@@ -100,7 +112,7 @@ header{
 }
 
 .sidebar .social-links-nav a:hover{
-    color: #9c27b0;
+    color: #0097a7;
     transition: all 1s ease 0s;
 }
 
@@ -114,6 +126,236 @@ header{
     justify-content: center;
     text-align: center;
     flex-direction: column;
-    height: 90vh;
+    height: 100vh;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.739),
+        rgba(0, 0, 0, 0.739)
+    )
+    ,url("/media/fondo-hero.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
 
+#hero h1{
+    color: #fff;
+}
+
+
+#sobre-mi{
+    height: 100vh;
+    background-color: #6a0080;
+    background-image: linear-gradient(135deg,#6d6d6d,#1b1b1b);
+    clip-path: polygon(0 0,100% 0,100% 80%,0 100%); 
+}
+
+#sobre-mi h2{
+    font-size: 2em;
+    opacity: 1;
+
+}
+
+#sobre-mi .container{
+    
+    text-align: center;
+    padding: 200px 12px;
+    color: #efefef
+
+}
+
+#proyectos {
+    height: 100vh;
+    text-align: center;
+    color: #272341;
+}
+
+#proyectos .container{
+    padding: 50px 12px;
+}
+#proyectos h2{
+    margin-top: 0;
+    font-size: 2em;
+    opacity: 1;
+}
+#proyectos h3{
+    color: #efefef;
+}
+#proyectos .container p{
+    display: none;
+}
+
+#proyectos .proyecto button{
+    font-size: 1em;
+    border-radius: 6px;
+    padding: 5px 20px;
+}
+
+
+#proyectos .proyecto{
+    background-position: center center;
+    background-size: cover;
+    padding: 25px 0px;
+    margin: 20px ;
+    border-radius: 15px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.712) ;
+}
+
+.proyecto:first-child{
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.718),
+        rgba(0, 0, 0, 0.718)
+    )
+    ,url("/media/proyecto1.jpg");
+   
+}
+
+.proyecto:nth-child(2){
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.718),
+        rgba(0, 0, 0, 0.718)
+    )
+    ,url("/media/proyecto2.jpg");
+   
+
+}
+
+.proyecto:nth-child(3){
+    background-image: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.718),
+        rgba(0, 0, 0, 0.718)
+    )
+    ,url("/media/proyecto3.jpg");
+   
+}
+
+#skills{
+    height: 100vh;
+    text-align: center;
+    margin-top: 50px;
+    background-color: #efefef;
+    color: #272341;
+}
+
+#skills .container{
+    padding: 20px 12px;
+    box-sizing: border-box;
+}
+
+#skills img{
+    width: 100px;
+}
+
+.row{
+    margin-top: 10px;
+    display: flex;
+    padding: 5px;
+    flex-wrap: wrap;
+}
+
+.column{
+    flex: 100%;
+    padding: 5px ;
+    
+}
+
+
+.column .item  {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+#contacto{
+    height: 100vh;
+    background-color: #6a0080;
+    background-image: linear-gradient(135deg,#6d6d6d,#1b1b1b);
+    clip-path: polygon(0 15vh,100% 0,100% 100%,0 100%);
+    
+}
+
+#contacto .container{
+    text-align: center;
+    height: 100%;
+    padding: 150px 12px;
+    color: #fff;
+}
+
+.social-links i { 
+    margin: 10px 10px 10px 10px;
+    padding: 30px 10px;  
+    font-size: 50px;
+    color: #e0e0e0;
+    -webkit-text-stroke: 0.1px #000;
+    border-radius: 10px;
+    border: 1px solid rgba(0,0,0,0.5);
+    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.668) ;
+
+}
+
+.social-links i:hover{
+    color: #0097a7;
+    transition: all 0.4s ease 0s;
+    
+}
+
+.mail-contact{
+    
+    font-size: 1em;
+    margin-top: 50px;
+    font-weight: bold;
+    padding: 10px 20px;
+   
+    
+}
+
+.mail-contact a{
+    color: #fff;
+    border: 2px solid #fff;
+    padding: 10px;
+    font-weight: bold;
+    background-color: transparent;
+    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
+    
+}
+.mail-contact a:hover{
+    transition-delay: 0.1s;
+    color: #247777;
+    background-color: #e0e0e0;
+    border: 1px solid ;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.835);
+}
+
+.hr{
+    margin: 30px 12px;
+    padding: 30px;
+    
+   
+}
+
+hr{
+
+    border: 0;
+    border-top: 2px solid rgba(0, 0, 0, 0.201);
+}
+
+footer{
+    background-color: #efefef;
+
+}
+
+footer p{
+    margin: 0;
+    padding: 12px;
+    color: rgb(146, 146, 146)
+}
+
+footer .container{
+    background-color: #484848;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
