--- a/css/index.css
+++ b/css/index.css
@@ -37,6 +37,51 @@ ul {
     list-style: none;
 }
 
+
+@keyframes ldio-r7quzwqmis {
+    0% { transform: rotate(0deg) }
+    50% { transform: rotate(180deg) }
+    100% { transform: rotate(360deg) }
+  }
+  .ldio-r7quzwqmis div {
+    animation: ldio-r7quzwqmis 1s linear infinite;
+    position: relative;
+    display: inline-block;
+    width: 160px;
+    height: 160px;
+    top: 40%;
+    left: 45%;
+    right: 50%;
+    bottom: 50%;
+    border-radius: 50%;
+    box-shadow: 0 4px 0 0 #292664;
+    transform-origin: 80px 82px;
+  }
+  .loadingio-spinner-eclipse-5owis7mtho {
+    width: 200px;
+    height: 200px;
+    background: #f1f2f3;
+  }
+  .ldio-r7quzwqmis {
+    width: 100%;
+    height: 100%;
+    transform: translateZ(0) scale(1);
+    backface-visibility: hidden;
+    transform-origin: 0 0; /* see note above */
+  }
+
+  .carga{
+    background-color: #e0e0e0; ;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    z-index: 6;
+    clip-path: circle(111.3% at 49% 0);
+    transition: clip-path 0.8s ease-in-out;
+}
+.carga2{
+    clip-path: circle(0% at 49% 0);
+}
 button {
     font-size: 1.2em;
     margin-top: 20px;
@@ -91,7 +136,7 @@ header {
     padding: 25px;
     width: 100%;
     background-color: #484848;
-    
+    cursor: default;
 
 
 }
@@ -101,7 +146,7 @@ header {
     width: 100%;
     height: auto;
     border-radius: 50px;
-    
+    cursor: default;
 
 }
 
@@ -372,6 +417,7 @@ footer .container {
     justify-content: center;
     align-items: flex-end;
 }
+
 
 @media (min-width:1200px) {
     .main {
